--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,10 @@ MANIFEST
 *.manifest
 *.spec
 
+# vscode
+.vscode
+workspace.code-workspace
+
 # Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
